kubernetes/overlays/local/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: web-v1
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
        traefik.ingress.kubernetes.io/router.middlewares: sweetrpg-game-systems-strip-prefix-game-systems@kubernetescrd,sweetrpg-game-systems-errors-shared-web@kubernetescrd
        kubernetes.io/ingress.class: traefik

spec:
    ingressClassName: traefik
    rules:
        - host: sweetrpg.local
          http:
              paths:
                  - pathType: Prefix
                    path: /game-systems
                    backend:
                        service:
                            name: web-v1
                            port:
                                name: http
    tls:
        - hosts:
              - sweetrpg.local
